Added price tag feature and removed MAIN.html

--- a/11A2 FOODS/11A2MENU.html
+++ b/11A2 FOODS/11A2MENU.html
@@ -19,9 +19,12 @@
     <div class="flyer ">
         <div class="flyer-extender">
             <div class="CIRCLE ONE"><img src="../image/M&C pic.png"></div>
+            <div class="CIRCLE TWO">10$</div>
         </div>
-        <div class="CIRCLE TWO"><img src="../image/COHEE.png"></div>
-        <div class="CIRCLE THREE"><span>+</span></div>
+        <div class="CIRCLE THREE"><img src="../image/COHEE.png"></div>
+        <div class="CIRCLE FOUR"><span>+</span></div>
+        
+        
         <button>more INFO</button>
     </div>
     <div class="flyer background">
