--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <div>
     <div class="flyer ">
         <div class="flyer-extender">
-            <div class="CIRCLE ONE"><img src="../image/M&C pic.png"></div>
+            <div class="CIRCLE ONE"><img src="image/M&C pic.png"></div>
             <div class="CIRCLE TWO">$7</div>
         </div>
-        <div class="CIRCLE THREE"><img src="../image/COHEE.png"></div>
+        <div class="CIRCLE THREE"><img src="image/COHEE.png"></div>
         <div class="CIRCLE FOUR"><span>+</span></div>
         
         
