--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="11A2.css">
-    <link rel="icon" href="../image/M&C                (for copying only) (2) - Copy.png">
+    <link rel="icon" href="image/M&C                (for copying only) (2) - Copy.png">
 </head>
 <body>
     <div class="menu">
