THIS IS THE ADDED STACKING DIV AND THE ADJUST COLOR ADJUSTMENT

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
         <div class="menu-item item3" style=--i:3s>3</div>
         <div class="menu-item item4" style=--i:4s>4</div>
     </div>
-<section id="MAIN-SECTION">
-    <div>
     <div class="flyer">
         <div class="flyer-extender">
             <div class="CIRCLE ONE"><img src="image/M&C pic.png"></div>
@@ -47,13 +45,29 @@
             <div class="black e"></div>
         </div>
     </div>
-    
+
+
+    <div class="card A" style='--i:0'>
+        <h2>FOODA</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia totam tenetur nemo, illo sunt, ipsum praesentium fugit provident ad harum ullam fugiat facere consequatur, pariatur nam doloribus quasi maxime architecto!</p>
+    </div>
+    <div class="card B" style='--i:1'>
+        <h2>FOODB</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia totam tenetur nemo, illo sunt, ipsum praesentium fugit provident ad harum ullam fugiat facere consequatur, pariatur nam doloribus quasi maxime architecto!</p>
+    </div>
+    <div class="card C" style='--i:2'>
+        <h2>FOODC</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia totam tenetur nemo, illo sunt, ipsum praesentium fugit provident ad harum ullam fugiat facere consequatur, pariatur nam doloribus quasi maxime architecto!</p>
+    </div>
+    <div class="card D" style='--i:3; --trans:3vh'>
+        <h2>FOODD</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia totam tenetur nemo, illo sunt, ipsum praesentium fugit provident ad harum ullam fugiat facere consequatur, pariatur nam doloribus quasi maxime architecto!</p>
+    </div>
     <div class="flyer">
         <div class="trapzoid"></div>
         <div class="trapzoid"></div>
         <div class="trapzoid">CHEESE BALL</div>
     </div>
     <script src="11A2.js"></script>
-</section>
 </body>
 </html>
