simplyfication and refinement of carsauel by ANDY

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
         <h1>11A2</h1>
     </div>
     <div class="menu">
-        <div class="menu-item item1" style=--i:1s>1</div>
-        <div class="menu-item item2" style=--i:2s>2</div>
-        <div class="menu-item item3" style=--i:3s>3</div>
-        <div class="menu-item item4" style=--i:4s>4</div>
+        <div class="menu-item" style="--i:3;">7</div>
+        <div class="menu-item" style="--i:4;">1</div>
+        <div class="menu-item" style="--i:5;">2</div>
+        <div class="menu-item" style="--i:6;">3</div>
+        <div class="menu-item" style="--i:7;">4</div>
     </div>
     <div class="flyer">
         <div class="flyer-extender">
@@ -49,6 +50,7 @@
 
     <div class="card A" style='--i:0'>
         <h2>FOODA</h2>
+        
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia totam tenetur nemo, illo sunt, ipsum praesentium fugit provident ad harum ullam fugiat facere consequatur, pariatur nam doloribus quasi maxime architecto!</p>
     </div>
     <div class="card B" style='--i:1'>
