--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./legacy/11A2.css"/>
+    <link rel="stylesheet" href="./src/11A2.css"/>
     <link rel="icon" href="./image/M&C_logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,8 +10,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>the_page</title>
   </head>
-  <body>
+  <header>
+      <video autoPlay loop muted >
+              <source src="./picture/FASTVIDEO.mp4" type="video/mp4"></source>
+              <p>the video isn't supported</p>
+      </video>
+      <div className="header">
+          <h1 id="HERO">11A2</h1>
+      </div>
+  </header>
+
     <div id="root"></div>
+    <script src="11A2.js"></script>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+  
 </html>
