--- a/index.html
+++ b/index.html
@@ -10,18 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>the_page</title>
   </head>
-  <header>
-      <video autoPlay loop muted >
-              <source src="./picture/FASTVIDEO.mp4" type="video/mp4"></source>
-              <p>the video isn't supported</p>
-      </video>
-      <div className="header">
-          <h1 id="HERO">11A2</h1>
-      </div>
-  </header>
-
     <div id="root"></div>
-    <script src="11A2.js"></script>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="11A2.js" defer></script>
   
 </html>
