just for update sake

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./src/11A2.css"/>
-    <link rel="icon" href="./image/M&C_logo.png">
+    <link rel="icon" href="./picture/Gemini_Generated_Image_hal23ihal23ihal2 - Copy - Copy.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Bebas+Neue&family=Permanent+Marker&display=swap" rel="stylesheet">
